samples/_failures_safe/1761075610_cef067_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_005c837b.c:165: error: expected ‘;’, ‘,’ or ‘)’ at end of input
